2008-08-08  Don Porter  <dgp@users.sourceforge.net>

	* changes:	Updates for 8.5.4 release.

2008-08-05  Joe English  <jenglish@users.sourceforge.net>

	* generic/tk.h, generic/tkEvent.c: Fix for [Bug 2010422]
	"no event type or button # or keysym while executing
	"bind Listbox <MouseWheel> [...]".

2008-08-01  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/tkWinWm.c: Backported fixes for handling unmapped parent
	* test/wm.test:  toplevels. [Bug 2009788, 2028703]

2008-07-31  Don Porter  <dgp@users.sourceforge.net>

	* generic/tk.h:	Added missing EXTERN for the Tcl_PkgInitStubsCheck
	declaration to fix inability to embed non-stub-enabled Tk on Windows.

2008-07-26  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* doc/options.n: Direct to the font manual for -font [Bug 1686012]

	* win/tkWinWindow.c: Check for 0x prefix in sprintf %p. Bug [2026405]

2008-07-22  Daniel Steffen  <das@users.sourceforge.net>

	* library/ttk/aquaTheme.tcl: Use system color names and TIP145 named
	font instead of hardcoded color values and deprecated native font name.

	* macosx/tkMacOSXHLEvents.c: sync with HEAD.

2008-07-04  Joe English  <jenglish@users.sourceforge.net>

	* generic/ttk/ttkDefaultTheme.c, generic/ttk/ttkClamTheme.c,
	generic/ttk/ttkClassicTheme.c, generic/ttk/ttkElements.c: 
	Backport [Bug 2009213].

2008-06-29  Don Porter  <dgp@users.sourceforge.net>

	*** 8.5.3 TAGGED FOR RELEASE ***

	* generic/tk.h:		Bump to 8.5.3 for release.
	* library/tk.tcl:
	* unix/configure.in:
	* unix/tk.spec:
	* win/configure.in:
	* README:

	* unix/configure:	autoconf-2.59
	* win/configure:

	* changes:	Updates for 8.5.3 release.

2008-06-26  Don Porter  <dgp@users.sourceforge.net>

	* generic/tkPanedWindow.c (PanedWindowProxyCommand)
	(DisplayPanedWindow): Ensure that a zero width never gets fed to the
	underlying window system. [Bug 1639824]  (Backport fix from dkf).

2008-06-20  Joe English  <jenglish@users.sourceforge.net>
