@@ -3,7 +3,7 @@
 # generate the file "configure", which is run during Tk installation
 # to configure the system for the local environment.
 #
-# RCS: @(#) $Id: configure.in,v 1.77.2.4 2008/06/30 03:37:39 dgp Exp $
+# RCS: @(#) $Id: configure.in,v 1.77.2.5 2008/08/08 18:12:33 dgp Exp $
 
 AC_INIT(../generic/tk.h)
 AC_PREREQ(2.59)
@@ -16,7 +16,7 @@ SHELL=/bin/sh
 TK_VERSION=8.5
 TK_MAJOR_VERSION=8
 TK_MINOR_VERSION=5
-TK_PATCH_LEVEL=".3"
+TK_PATCH_LEVEL=".4"
 VER=$TK_MAJOR_VERSION$TK_MINOR_VERSION
 
 #------------------------------------------------------------------------
