@@ -1,5 +1,15 @@
 2008-08-08  Don Porter  <dgp@users.sourceforge.net>
 
+	* generic/tk.h:		Bump to 8.5.4 for release.
+	* library/tk.tcl:
+	* unix/configure.in:
+	* unix/tk.spec:
+	* win/configure.in:
+	* README:
+
+	* unix/configure:	autoconf-2.59
+	* win/configure:
+
 	* changes:	Updates for 8.5.4 release.
 
 2008-08-05  Joe English  <jenglish@users.sourceforge.net>
